# osltm

./: .gitignore  README.md  pyproject.toml
docs/logs/: 20251020.md  20251021.md  20251023.md  20251026.md  20251029.md  20251101.md  20251103.md  20251107.md  20251108.md  20251109.md  20251111.md  20251113.md  20251114.md  20251119.md
docs/sample/: sample_stratified_days.txt
docs/todo/: todo.md
src/db/: session.py  session_v0.py  session_v1.py  session_v2.py
src/repo/check_ins/: models.py  repository.py
src/repo/estimates/: models.py  repository.py
src/repo/processing/: models.py  repository.py
src/repo/stations/: models.py  repository.py
src/repo/v0/estimates/: repository.py
src/repo/v0/processing/: models.py  repository.py
src/scripts/analysis/: check_overdispersion.py  functional_clustering.py  functional_differences.py  hawkes_fit.py  kde_intensity_estimation.py  nb_fit.py  self_excitation.py  time_series_clustering.py
src/scripts/notebooks/: flows_comparison_20251029.ipynb
src/scripts/od/: analyze_two_check_ins_gap.py  count_multiple_check_ins.py
src/scripts/plot/: plot_estimates_series.py
src/scripts/populate/: populate_daily_check_ins.py  populate_daily_check_ins_estimates.py  populate_daily_check_outs_estimates.py
src/scripts/realtime/: compute_realtime_od.py  estimate_lambda_in.py  estimate_synthetic_lambda.py
src/scripts/simulate/: generate_synthetic_data.py  simulate_flows.py
src/utils/: colombian_holidays.py  day_type.py  download_daily_data.py  logging.py  sample_stratified_days.py  stations.py
(+45 files in other folders)
